tests/snapshots/run_wpt_conformance__onnx_cast_float_to_integer_overflows.snap
---
source: tests/run_wpt_conformance.rs
expression: "(&file_name, &test_name, &backend_prefix, \"PASS\")"
---
(
    "mlNumber.https.any.js",
    "cast float to integer overflows",
    "onnx",
    "PASS",
)
