tests/snapshots/run_wpt_conformance__onnx_cast_fractional_float_to_integer.snap
---
source: tests/run_wpt_conformance.rs
expression: "(&file_name, &test_name, &backend_prefix, \"PASS\")"
---
(
    "mlNumber.https.any.js",
    "cast fractional float to integer",
    "onnx",
    "PASS",
)
